working on logo

--- a/index.html
+++ b/index.html
@@ -148,11 +148,13 @@
         </mask>
         <rect width="1280" height="900" fill="url(#space-dogs-pattern)" mask="url(#meets-mask)"></rect>
         <g id="js-meets-circles">
-          <circle fill="white" stroke="none" r="75" transform="translate(604,221)" data-x="604" data-y="221"></circle>
-          <circle fill="white" stroke="none" r="100" transform="translate(771,290)" data-x="771" data-y="290"></circle>
-          <circle fill="white" stroke="none" r="85" transform="translate(591,227)" data-x="591" data-y="227"></circle>
-          <circle fill="white" stroke="none" r="79" transform="translate(723,241)" data-x="723" data-y="241"></circle>
-          <circle fill="white" stroke="none" r="85" transform="translate(581,265)" data-x="581" data-y="265"></circle>
+          <circle fill="white" stroke="none" r="91" transform="translate(565,284)" data-x="565" data-y="284"></circle>
+          <circle fill="white" stroke="none" r="56" transform="translate(517,267)" data-x="517" data-y="267"></circle>
+          <circle fill="white" stroke="none" r="52" transform="translate(581,244)" data-x="581" data-y="244"></circle>
+          <circle fill="white" stroke="none" r="58" transform="translate(640,252)" data-x="640" data-y="252"></circle>
+          <circle fill="white" stroke="none" r="75" transform="translate(719,268)" data-x="719" data-y="268"></circle>
+          <circle fill="white" stroke="none" r="76" transform="translate(777,220)" data-x="777" data-y="220"></circle>
+          <circle fill="white" stroke="none" r="66" transform="translate(704,220)" data-x="704" data-y="220"></circle>
         </g>
         <rect width="1280" height="900" fill="url(#owls-pattern)" mask="url(#burst-mask)"></rect>
         <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" transform="translate(23,130)">
@@ -172,7 +174,7 @@
                   <path id="Oval-46" d="M22.520939,106 C28.741821,118.235456 41.6220369,126.689487 64,127 C96.7298602,126.652008 123,100.538567 123,68 C123,36.1134415 96.7298602,10 64,10 C63.5508363,9.97882902 63.0985319,9.9790176 62.6434551,10 L62.6434551,10 L17,10 C9.82029825,10 4,15.8202983 4,23 C4,28.404523 7.29797354,33.0387629 11.9912007,35 C7.29797354,36.9612371 4,41.595477 4,47 C4,51.9881625 6.80940026,56.3201544 10.9322251,58.5 C6.80940026,60.6798456 4,65.0118375 4,70 C4,74.9881625 6.80940026,79.3201544 10.9322251,81.5 C6.80940026,83.6798456 4,88.0118375 4,93 C4,100.179702 9.82029825,106 17,106 L22.520939,106 Z M10.1113281,35.4038086 L22.9257812,35.4038086 M10.1113281,58.4038086 L22.9257812,58.4038086 M10.1113281,81.4038086 L22.9257812,81.4038086 M23,106 L65,106" stroke="#1F2947" stroke-width="5" fill="#FBF7E8"></path>
                 </g>
               </g>
-              <rect fill-opacity="0.1" fill="#000000" x="139" y="25" width="27" height="80" rx="5" class="js-sleeve"></rect>
+              <rect fill-opacity="0.1" fill="#000000" x="139" y="25" width="27" height="75" rx="5" class="js-sleeve"></rect>
               <rect fill="#FFFFFF" x="143" y="20" width="27" height="80" rx="5" class="js-sleeve"></rect>
               <mask id="right-shirt">
                 <rect id="js-right-shirt" transform="translate(500,0)" fill="white" rx="5" x="770" y="288" width="282" height="97" class="js-shirt"></rect>
@@ -196,7 +198,7 @@
                   <path id="Oval-46" d="M22.520939,103 C28.741821,115.235456 41.6220369,123.689487 64,124 C96.7298602,123.652008 123,97.5385667 123,65 C123,33.1134415 96.7298602,7 64,7 C63.5508363,6.97882902 63.0985319,6.9790176 62.6434551,7 L62.6434551,7 L17,7 C9.82029825,7 4,12.8202983 4,20 C4,25.404523 7.29797354,30.0387629 11.9912007,32 C7.29797354,33.9612371 4,38.595477 4,44 C4,48.9881625 6.80940026,53.3201544 10.9322251,55.5 C6.80940026,57.6798456 4,62.0118375 4,67 C4,71.9881625 6.80940026,76.3201544 10.9322251,78.5 C6.80940026,80.6798456 4,85.0118375 4,90 C4,97.1797017 9.82029825,103 17,103 L22.520939,103 Z M10.1113281,32.4038086 L22.9257812,32.4038086 M10.1113281,55.4038086 L22.9257812,55.4038086 M10.1113281,78.4038086 L22.9257812,78.4038086 M23,103 L65,103" stroke="#1F2947" stroke-width="5" fill="#FBF7E8"></path>
                 </g>
               </g>
-              <rect fill-opacity="0.1" fill="#000000" x="139" y="13" width="27" height="80" rx="5" class="js-sleeve"></rect>
+              <rect fill-opacity="0.1" fill="#000000" x="139" y="18" width="27" height="75" rx="5" class="js-sleeve"></rect>
               <rect fill="#FFFFFF" x="143" y="17" width="27" height="80" rx="5" class="js-sleeve"></rect>
               <rect id="fist-mask" transform="translate(100,40)" fill="#FBF7E8" width="35" height="38.5"></rect>
             </g>
@@ -297,26 +299,26 @@
       </g>
       <g id="js-svg">
         <g id="js-svg-circles" class="h-g">
-          <circle fill="white" stroke="" r="0" transform="translate(344,288)" data-x="344" data-y="288"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(969,762)" data-x="969" data-y="762"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(677,720)" data-x="677" data-y="720"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(667,301)" data-x="667" data-y="301"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(748,237)" data-x="748" data-y="237"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(701,124)" data-x="701" data-y="124"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(301,134)" data-x="301" data-y="134"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(742,478)" data-x="742" data-y="478"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(330,495)" data-x="330" data-y="495"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(662,404)" data-x="662" data-y="404"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(721,354)" data-x="721" data-y="354"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(563,723)" data-x="563" data-y="723"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(408,793)" data-x="408" data-y="793"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(701,552)" data-x="701" data-y="552"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(510,590)" data-x="510" data-y="590"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(778,653)" data-x="778" data-y="653"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(575,721)" data-x="575" data-y="721"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(405,811)" data-x="405" data-y="811"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(634,731)" data-x="634" data-y="731"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(943,179)" data-x="943" data-y="179"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(917,587)" data-x="917" data-y="587"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(352,249)" data-x="352" data-y="249"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(752,551)" data-x="752" data-y="551"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(406,214)" data-x="406" data-y="214"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(255,745)" data-x="255" data-y="745"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(854,826)" data-x="854" data-y="826"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(739,166)" data-x="739" data-y="166"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(435,558)" data-x="435" data-y="558"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(821,604)" data-x="821" data-y="604"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(581,168)" data-x="581" data-y="168"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(574,785)" data-x="574" data-y="785"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(673,99)" data-x="673" data-y="99"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(887,428)" data-x="887" data-y="428"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(1008,595)" data-x="1008" data-y="595"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(390,212)" data-x="390" data-y="212"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(563,765)" data-x="563" data-y="765"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(843,681)" data-x="843" data-y="681"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(297,344)" data-x="297" data-y="344"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(264,127)" data-x="264" data-y="127"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(328,297)" data-x="328" data-y="297"></circle>
         </g>
         <mask id="svg-s-mask">
           <g transform="translate(250,0)">
@@ -594,6 +596,41 @@
   <rect id="js-wave1-base" fill="url(#wave-gradient)" x="0" y="47" width="2000" height="700"></rect>
   <path id="js-wave1-top2" fill="white" d="M100,50 C100,22.3857625 77.6142375,0 50,0 C22.3857625,0 0,22.3857625 0,50 L100,50 Z M200,50 C200,22.3857625 177.614237,0 150,0 C122.385763,0 100,22.3857625 100,50 L200,50 Z M300,50 C300,22.3857625 277.614237,0 250,0 C222.385763,0 200,22.3857625 200,50 L300,50 Z M400,50 C400,22.3857625 377.614237,0 350,0 C322.385763,0 300,22.3857625 300,50 L400,50 Z M500,50 C500,22.3857625 477.614237,0 450,0 C422.385763,0 400,22.3857625 400,50 L500,50 Z M600,50 C600,22.3857625 577.614237,0 550,0 C522.385763,0 500,22.3857625 500,50 L600,50 Z M700,50 C700,22.3857625 677.614237,0 650,0 C622.385763,0 600,22.3857625 600,50 L700,50 Z M800,50 C800,22.3857625 777.614237,0 750,0 C722.385763,0 700,22.3857625 700,50 L800,50 Z M900,50 C900,22.3857625 877.614237,0 850,0 C822.385763,0 800,22.3857625 800,50 L900,50 Z M1000,50 C1000,22.3857625 977.614237,0 950,0 C922.385763,0 900,22.3857625 900,50 L1000,50 Z M1100,50 C1100,22.3857625 1077.61424,0 1050,0 C1022.38576,0 1000,22.3857625 1000,50 L1100,50 Z M1200,50 C1200,22.3857625 1177.61424,0 1150,0 C1122.38576,0 1100,22.3857625 1100,50 L1200,50 Z M1300,50 C1300,22.3857625 1277.61424,0 1250,0 C1222.38576,0 1200,22.3857625 1200,50 L1300,50 Z M1400,50 C1400,22.3857625 1377.61424,0 1350,0 C1322.38576,0 1300,22.3857625 1300,50 L1400,50 Z M1500,50 C1500,22.3857625 1477.61424,0 1450,0 C1422.38576,0 1400,22.3857625 1400,50 L1500,50 Z M1600,50 C1600,22.3857625 1577.61424,0 1550,0 C1522.38576,0 1500,22.3857625 1500,50 L1600,50 Z M1700,50 C1700,22.3857625 1677.61424,0 1650,0 C1622.38576,0 1600,22.3857625 1600,50 L1700,50 Z M1800,50 C1800,22.3857625 1777.61424,0 1750,0 C1722.38576,0 1700,22.3857625 1700,50 L1800,50 Z M1900,50 C1900,22.3857625 1877.61424,0 1850,0 C1822.38576,0 1800,22.3857625 1800,50 L1900,50 Z M2000,50 C2000,22.3857625 1977.61424,0 1950,0 C1922.38576,0 1900,22.3857625 1900,50 L2000,50 Z"></path>
   <path id="js-wave1-top" d="M100,50 C100,22.3857625 77.6142375,0 50,0 C22.3857625,0 0,22.3857625 0,50 L100,50 Z M200,50 C200,22.3857625 177.614237,0 150,0 C122.385763,0 100,22.3857625 100,50 L200,50 Z M300,50 C300,22.3857625 277.614237,0 250,0 C222.385763,0 200,22.3857625 200,50 L300,50 Z M400,50 C400,22.3857625 377.614237,0 350,0 C322.385763,0 300,22.3857625 300,50 L400,50 Z M500,50 C500,22.3857625 477.614237,0 450,0 C422.385763,0 400,22.3857625 400,50 L500,50 Z M600,50 C600,22.3857625 577.614237,0 550,0 C522.385763,0 500,22.3857625 500,50 L600,50 Z M700,50 C700,22.3857625 677.614237,0 650,0 C622.385763,0 600,22.3857625 600,50 L700,50 Z M800,50 C800,22.3857625 777.614237,0 750,0 C722.385763,0 700,22.3857625 700,50 L800,50 Z M900,50 C900,22.3857625 877.614237,0 850,0 C822.385763,0 800,22.3857625 800,50 L900,50 Z M1000,50 C1000,22.3857625 977.614237,0 950,0 C922.385763,0 900,22.3857625 900,50 L1000,50 Z M1100,50 C1100,22.3857625 1077.61424,0 1050,0 C1022.38576,0 1000,22.3857625 1000,50 L1100,50 Z M1200,50 C1200,22.3857625 1177.61424,0 1150,0 C1122.38576,0 1100,22.3857625 1100,50 L1200,50 Z M1300,50 C1300,22.3857625 1277.61424,0 1250,0 C1222.38576,0 1200,22.3857625 1200,50 L1300,50 Z M1400,50 C1400,22.3857625 1377.61424,0 1350,0 C1322.38576,0 1300,22.3857625 1300,50 L1400,50 Z M1500,50 C1500,22.3857625 1477.61424,0 1450,0 C1422.38576,0 1400,22.3857625 1400,50 L1500,50 Z M1600,50 C1600,22.3857625 1577.61424,0 1550,0 C1522.38576,0 1500,22.3857625 1500,50 L1600,50 Z M1700,50 C1700,22.3857625 1677.61424,0 1650,0 C1622.38576,0 1600,22.3857625 1600,50 L1700,50 Z M1800,50 C1800,22.3857625 1777.61424,0 1750,0 C1722.38576,0 1700,22.3857625 1700,50 L1800,50 Z M1900,50 C1900,22.3857625 1877.61424,0 1850,0 C1822.38576,0 1800,22.3857625 1800,50 L1900,50 Z M2000,50 C2000,22.3857625 1977.61424,0 1950,0 C1922.38576,0 1900,22.3857625 1900,50 L2000,50 Z"></path>
+</g><defs>
+  <linearGradient x1="64.8928892%" y1="96.3691406%" x2="28.2258366%" y2="46.6467833%" id="linearGradient-11">
+      <stop stop-color="#FD1C41" offset="0%"></stop>
+      <stop stop-color="#9013FE" offset="50%"></stop>
+      <stop stop-color="#00C4FF" offset="100%"></stop>
+  </linearGradient>
+  <linearGradient x1="91.5307265%" y1="18.3704401%" x2="55.8046513%" y2="81.2044917%" id="linearGradient-21">
+      <stop stop-color="#FFFFFF" stop-opacity="0" offset="0%"></stop>
+      <stop stop-color="#FFFFFF" offset="100%"></stop>
+  </linearGradient>
+  <linearGradient x1="42.8547664%" y1="86.5277575%" x2="42.8547651%" y2="18.1060449%" id="linearGradient-31">
+      <stop stop-color="#FFFFFF" stop-opacity="-0.10688574" offset="0%"></stop>
+      <stop stop-color="#FFFFFF" offset="100%"></stop>
+  </linearGradient>
+  <linearGradient x1="28.685864%" y1="13.3031819%" x2="91.0727072%" y2="105.108419%" id="linearGradient-41">
+      <stop stop-color="#000000" stop-opacity="0" offset="0%"></stop>
+      <stop stop-color="#000000" offset="100%"></stop>
+  </linearGradient>
+  <linearGradient x1="6.14318848%" y1="82.1142578%" x2="74.6337891%" y2="2.48372396%" id="linearGradient-51">
+      <stop stop-color="#000000" stop-opacity="0" offset="0%"></stop>
+      <stop stop-color="#000000" offset="100%"></stop>
+  </linearGradient>
+
+  <pattern id="gradient" width="500" height="500" patternUnits="userSpaceOnUse">
+    <rect y="-100" id="js-logo-gradient" fill="url(#linearGradient-11)" width="500" height="500"></rect>
+  </pattern>
+
+</defs>
+<g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" sketch:type="MSPage">
+    <path d="M50.4617077,246.951585 C50.4617077,246.951585 116.878961,185.348371 134.509353,185.348371 C157.080326,197.743838 197.402729,320.078235 230.886444,326.93893 C263.024978,299.658451 369.613336,49.8180018 369.613336,49.8180018" id="Path-23" stroke="url(#gradient)" stroke-width="100" sketch:type="MSShapeGroup"></path>
+    <path d="M17,17 L17,417 L417,417 L417,17 L17,17 Z M328.48912,68.1102357 C348.556804,66.0814043 368.624487,64.0777088 388.692171,62.0704225 C350.347163,148.983405 312.002155,235.896388 273.646469,322.80578 C272.443405,325.470192 271.421868,328.253103 269.692018,330.637429 C267.33572,333.976921 265.306884,337.643181 262.249392,340.404546 C254.304896,347.643704 243.779862,352.494945 232.934485,352.128678 C230.222252,352.071224 227.506458,352.125087 224.804902,351.880909 C219.18111,351.306373 213.753083,349.392449 208.773536,346.731627 C203.459408,343.855355 198.583082,340.08496 194.664224,335.441989 C192.094365,332.49749 190.27909,329.010773 188.499409,325.556373 C168.35342,287.313799 148.203871,249.078406 128.043644,210.846604 C113.154832,224.664203 98.2766987,238.488983 83.3914464,252.302991 C65.0144599,247.670792 46.6410328,243.035002 28.2676056,238.395621 C48.9474994,219.242016 69.6345119,200.095593 90.317965,180.941989 C93.0017241,178.507391 95.5573461,175.925568 98.4261919,173.710013 C104.274224,169.393808 111.218539,166.754532 118.319467,165.476189 C120.337625,165.074013 122.402055,165.002196 124.416654,164.578476 C127.812285,163.978804 131.279104,164.248117 134.710329,164.187073 C141.45888,164.118847 148.086412,166.144087 154.037665,169.264538 C159.529761,172.173128 164.566258,176.040476 168.559863,180.845036 C171.909222,184.762655 173.948737,189.552852 176.408256,194.037826 C193.909639,227.267571 211.432379,260.486543 228.933762,293.712697 C262.117695,218.513073 295.312306,143.31345 328.48912,68.1102357 Z" id="Rectangle-9" fill="#FFFFFF" sketch:type="MSShapeGroup"></path>
+    <path d="M104.271677,169.019145 L26.7986356,238.817231 L86.498239,254.158889 L129.30813,211.703348 L104.271677,169.019145 Z" id="Rectangle-15" fill="url(#linearGradient-21)" sketch:type="MSShapeGroup"></path>
+    <path d="M397.015628,49.796875 L325.550781,58.5039062 L281.929027,158.18512 L346.483935,164.583667 L397.015628,49.796875 Z" id="Rectangle-16" fill="url(#linearGradient-31)" sketch:type="MSShapeGroup"></path>
+    <path d="M107.64979,172.928948 L128.94929,211.494268 L114.947167,223.937529 L107.64979,172.928948 Z" id="Path-7" opacity="0.104535914" fill="url(#linearGradient-41)" sketch:type="MSShapeGroup"></path>
+    <path d="M218.703425,274.14146 L228.458356,292.96826 L205.469854,341.970711 L218.703425,274.14146 Z" id="Path-8" opacity="0.104535914" fill="url(#linearGradient-51)" sketch:type="MSShapeGroup"></path>
 </g>
     </svg>
     <script src="bower_components/jquery/dist/jquery.js"></script>
