--- a/index.html
+++ b/index.html
@@ -148,13 +148,13 @@
         </mask>
         <rect width="1280" height="900" fill="url(#space-dogs-pattern)" mask="url(#meets-mask)"></rect>
         <g id="js-meets-circles">
-          <circle fill="white" stroke="none" r="91" transform="translate(565,284)" data-x="565" data-y="284"></circle>
-          <circle fill="white" stroke="none" r="56" transform="translate(517,267)" data-x="517" data-y="267"></circle>
-          <circle fill="white" stroke="none" r="52" transform="translate(581,244)" data-x="581" data-y="244"></circle>
-          <circle fill="white" stroke="none" r="58" transform="translate(640,252)" data-x="640" data-y="252"></circle>
-          <circle fill="white" stroke="none" r="75" transform="translate(719,268)" data-x="719" data-y="268"></circle>
-          <circle fill="white" stroke="none" r="76" transform="translate(777,220)" data-x="777" data-y="220"></circle>
-          <circle fill="white" stroke="none" r="66" transform="translate(704,220)" data-x="704" data-y="220"></circle>
+          <circle fill="white" stroke="none" r="89" transform="translate(561,284)" data-x="561" data-y="284"></circle>
+          <circle fill="white" stroke="none" r="57" transform="translate(669,213)" data-x="669" data-y="213"></circle>
+          <circle fill="white" stroke="none" r="51" transform="translate(586,272)" data-x="586" data-y="272"></circle>
+          <circle fill="white" stroke="none" r="100" transform="translate(778,276)" data-x="778" data-y="276"></circle>
+          <circle fill="white" stroke="none" r="55" transform="translate(525,226)" data-x="525" data-y="226"></circle>
+          <circle fill="white" stroke="none" r="99" transform="translate(554,207)" data-x="554" data-y="207"></circle>
+          <circle fill="white" stroke="none" r="53" transform="translate(634,200)" data-x="634" data-y="200"></circle>
         </g>
         <rect width="1280" height="900" fill="url(#owls-pattern)" mask="url(#burst-mask)"></rect>
         <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" transform="translate(23,130)">
@@ -299,26 +299,26 @@
       </g>
       <g id="js-svg">
         <g id="js-svg-circles" class="h-g">
-          <circle fill="white" stroke="" r="0" transform="translate(917,587)" data-x="917" data-y="587"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(352,249)" data-x="352" data-y="249"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(752,551)" data-x="752" data-y="551"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(406,214)" data-x="406" data-y="214"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(255,745)" data-x="255" data-y="745"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(854,826)" data-x="854" data-y="826"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(739,166)" data-x="739" data-y="166"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(435,558)" data-x="435" data-y="558"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(821,604)" data-x="821" data-y="604"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(581,168)" data-x="581" data-y="168"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(574,785)" data-x="574" data-y="785"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(673,99)" data-x="673" data-y="99"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(887,428)" data-x="887" data-y="428"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(1008,595)" data-x="1008" data-y="595"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(390,212)" data-x="390" data-y="212"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(563,765)" data-x="563" data-y="765"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(843,681)" data-x="843" data-y="681"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(297,344)" data-x="297" data-y="344"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(264,127)" data-x="264" data-y="127"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(328,297)" data-x="328" data-y="297"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(578,794)" data-x="578" data-y="794"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(491,189)" data-x="491" data-y="189"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(681,268)" data-x="681" data-y="268"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(822,141)" data-x="822" data-y="141"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(343,303)" data-x="343" data-y="303"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(347,696)" data-x="347" data-y="696"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(1014,179)" data-x="1014" data-y="179"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(560,788)" data-x="560" data-y="788"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(259,644)" data-x="259" data-y="644"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(785,388)" data-x="785" data-y="388"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(324,135)" data-x="324" data-y="135"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(817,101)" data-x="817" data-y="101"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(558,666)" data-x="558" data-y="666"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(757,697)" data-x="757" data-y="697"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(822,205)" data-x="822" data-y="205"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(822,778)" data-x="822" data-y="778"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(403,745)" data-x="403" data-y="745"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(560,389)" data-x="560" data-y="389"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(245,489)" data-x="245" data-y="489"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(731,571)" data-x="731" data-y="571"></circle>
         </g>
         <mask id="svg-s-mask">
           <g transform="translate(250,0)">
@@ -619,11 +619,15 @@
       <stop stop-color="#000000" offset="100%"></stop>
   </linearGradient>
 
-  <pattern id="gradient" width="500" height="500" patternUnits="userSpaceOnUse">
-    <rect y="-100" id="js-logo-gradient" fill="url(#linearGradient-11)" width="500" height="500"></rect>
+  <pattern id="gradient" width="420" height="420" patternUnits="userSpaceOnUse">
+    <rect id="js-logo-gradient" fill="url(#linearGradient-11)" width="420" height="420"></rect>
+    <!-- <rect x="500" y="-100" id="js-logo-gradient2" fill="url(#linearGradient-11)" width="500" height="500"></rect> -->
   </pattern>
 
 </defs>
+
+
+
 <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" sketch:type="MSPage">
     <path d="M50.4617077,246.951585 C50.4617077,246.951585 116.878961,185.348371 134.509353,185.348371 C157.080326,197.743838 197.402729,320.078235 230.886444,326.93893 C263.024978,299.658451 369.613336,49.8180018 369.613336,49.8180018" id="Path-23" stroke="url(#gradient)" stroke-width="100" sketch:type="MSShapeGroup"></path>
     <path d="M17,17 L17,417 L417,417 L417,17 L17,17 Z M328.48912,68.1102357 C348.556804,66.0814043 368.624487,64.0777088 388.692171,62.0704225 C350.347163,148.983405 312.002155,235.896388 273.646469,322.80578 C272.443405,325.470192 271.421868,328.253103 269.692018,330.637429 C267.33572,333.976921 265.306884,337.643181 262.249392,340.404546 C254.304896,347.643704 243.779862,352.494945 232.934485,352.128678 C230.222252,352.071224 227.506458,352.125087 224.804902,351.880909 C219.18111,351.306373 213.753083,349.392449 208.773536,346.731627 C203.459408,343.855355 198.583082,340.08496 194.664224,335.441989 C192.094365,332.49749 190.27909,329.010773 188.499409,325.556373 C168.35342,287.313799 148.203871,249.078406 128.043644,210.846604 C113.154832,224.664203 98.2766987,238.488983 83.3914464,252.302991 C65.0144599,247.670792 46.6410328,243.035002 28.2676056,238.395621 C48.9474994,219.242016 69.6345119,200.095593 90.317965,180.941989 C93.0017241,178.507391 95.5573461,175.925568 98.4261919,173.710013 C104.274224,169.393808 111.218539,166.754532 118.319467,165.476189 C120.337625,165.074013 122.402055,165.002196 124.416654,164.578476 C127.812285,163.978804 131.279104,164.248117 134.710329,164.187073 C141.45888,164.118847 148.086412,166.144087 154.037665,169.264538 C159.529761,172.173128 164.566258,176.040476 168.559863,180.845036 C171.909222,184.762655 173.948737,189.552852 176.408256,194.037826 C193.909639,227.267571 211.432379,260.486543 228.933762,293.712697 C262.117695,218.513073 295.312306,143.31345 328.48912,68.1102357 Z" id="Rectangle-9" fill="#FFFFFF" sketch:type="MSShapeGroup"></path>
@@ -632,6 +636,7 @@
     <path d="M107.64979,172.928948 L128.94929,211.494268 L114.947167,223.937529 L107.64979,172.928948 Z" id="Path-7" opacity="0.104535914" fill="url(#linearGradient-41)" sketch:type="MSShapeGroup"></path>
     <path d="M218.703425,274.14146 L228.458356,292.96826 L205.469854,341.970711 L218.703425,274.14146 Z" id="Path-8" opacity="0.104535914" fill="url(#linearGradient-51)" sketch:type="MSShapeGroup"></path>
 </g>
+
     </svg>
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/velocity/jquery.velocity.min.js"></script>
