--- a/index.html
+++ b/index.html
@@ -148,13 +148,13 @@
         </mask>
         <rect width="1280" height="900" fill="url(#space-dogs-pattern)" mask="url(#meets-mask)"></rect>
         <g id="js-meets-circles">
-          <circle fill="white" stroke="none" r="89" transform="translate(561,284)" data-x="561" data-y="284"></circle>
-          <circle fill="white" stroke="none" r="57" transform="translate(669,213)" data-x="669" data-y="213"></circle>
-          <circle fill="white" stroke="none" r="51" transform="translate(586,272)" data-x="586" data-y="272"></circle>
-          <circle fill="white" stroke="none" r="100" transform="translate(778,276)" data-x="778" data-y="276"></circle>
-          <circle fill="white" stroke="none" r="55" transform="translate(525,226)" data-x="525" data-y="226"></circle>
-          <circle fill="white" stroke="none" r="99" transform="translate(554,207)" data-x="554" data-y="207"></circle>
-          <circle fill="white" stroke="none" r="53" transform="translate(634,200)" data-x="634" data-y="200"></circle>
+          <circle fill="white" stroke="none" r="77" transform="translate(614,222)" data-x="614" data-y="222"></circle>
+          <circle fill="white" stroke="none" r="80" transform="translate(622,256)" data-x="622" data-y="256"></circle>
+          <circle fill="white" stroke="none" r="65" transform="translate(543,211)" data-x="543" data-y="211"></circle>
+          <circle fill="white" stroke="none" r="89" transform="translate(567,252)" data-x="567" data-y="252"></circle>
+          <circle fill="white" stroke="none" r="81" transform="translate(778,266)" data-x="778" data-y="266"></circle>
+          <circle fill="white" stroke="none" r="74" transform="translate(570,291)" data-x="570" data-y="291"></circle>
+          <circle fill="white" stroke="none" r="89" transform="translate(526,201)" data-x="526" data-y="201"></circle>
         </g>
         <rect width="1280" height="900" fill="url(#owls-pattern)" mask="url(#burst-mask)"></rect>
         <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" transform="translate(23,130)">
@@ -299,26 +299,26 @@
       </g>
       <g id="js-svg">
         <g id="js-svg-circles" class="h-g">
-          <circle fill="white" stroke="" r="0" transform="translate(578,794)" data-x="578" data-y="794"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(491,189)" data-x="491" data-y="189"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(681,268)" data-x="681" data-y="268"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(822,141)" data-x="822" data-y="141"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(343,303)" data-x="343" data-y="303"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(347,696)" data-x="347" data-y="696"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(1014,179)" data-x="1014" data-y="179"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(560,788)" data-x="560" data-y="788"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(259,644)" data-x="259" data-y="644"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(785,388)" data-x="785" data-y="388"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(324,135)" data-x="324" data-y="135"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(817,101)" data-x="817" data-y="101"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(558,666)" data-x="558" data-y="666"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(757,697)" data-x="757" data-y="697"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(822,205)" data-x="822" data-y="205"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(822,778)" data-x="822" data-y="778"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(403,745)" data-x="403" data-y="745"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(560,389)" data-x="560" data-y="389"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(245,489)" data-x="245" data-y="489"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(731,571)" data-x="731" data-y="571"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(668,590)" data-x="668" data-y="590"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(268,814)" data-x="268" data-y="814"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(768,582)" data-x="768" data-y="582"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(907,116)" data-x="907" data-y="116"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(763,715)" data-x="763" data-y="715"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(671,635)" data-x="671" data-y="635"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(733,640)" data-x="733" data-y="640"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(543,457)" data-x="543" data-y="457"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(349,725)" data-x="349" data-y="725"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(633,89)" data-x="633" data-y="89"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(354,473)" data-x="354" data-y="473"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(833,712)" data-x="833" data-y="712"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(567,789)" data-x="567" data-y="789"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(921,409)" data-x="921" data-y="409"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(296,111)" data-x="296" data-y="111"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(750,783)" data-x="750" data-y="783"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(696,716)" data-x="696" data-y="716"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(766,496)" data-x="766" data-y="496"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(616,94)" data-x="616" data-y="94"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(245,383)" data-x="245" data-y="383"></circle>
         </g>
         <mask id="svg-s-mask">
           <g transform="translate(250,0)">
@@ -597,46 +597,51 @@
   <path id="js-wave1-top2" fill="white" d="M100,50 C100,22.3857625 77.6142375,0 50,0 C22.3857625,0 0,22.3857625 0,50 L100,50 Z M200,50 C200,22.3857625 177.614237,0 150,0 C122.385763,0 100,22.3857625 100,50 L200,50 Z M300,50 C300,22.3857625 277.614237,0 250,0 C222.385763,0 200,22.3857625 200,50 L300,50 Z M400,50 C400,22.3857625 377.614237,0 350,0 C322.385763,0 300,22.3857625 300,50 L400,50 Z M500,50 C500,22.3857625 477.614237,0 450,0 C422.385763,0 400,22.3857625 400,50 L500,50 Z M600,50 C600,22.3857625 577.614237,0 550,0 C522.385763,0 500,22.3857625 500,50 L600,50 Z M700,50 C700,22.3857625 677.614237,0 650,0 C622.385763,0 600,22.3857625 600,50 L700,50 Z M800,50 C800,22.3857625 777.614237,0 750,0 C722.385763,0 700,22.3857625 700,50 L800,50 Z M900,50 C900,22.3857625 877.614237,0 850,0 C822.385763,0 800,22.3857625 800,50 L900,50 Z M1000,50 C1000,22.3857625 977.614237,0 950,0 C922.385763,0 900,22.3857625 900,50 L1000,50 Z M1100,50 C1100,22.3857625 1077.61424,0 1050,0 C1022.38576,0 1000,22.3857625 1000,50 L1100,50 Z M1200,50 C1200,22.3857625 1177.61424,0 1150,0 C1122.38576,0 1100,22.3857625 1100,50 L1200,50 Z M1300,50 C1300,22.3857625 1277.61424,0 1250,0 C1222.38576,0 1200,22.3857625 1200,50 L1300,50 Z M1400,50 C1400,22.3857625 1377.61424,0 1350,0 C1322.38576,0 1300,22.3857625 1300,50 L1400,50 Z M1500,50 C1500,22.3857625 1477.61424,0 1450,0 C1422.38576,0 1400,22.3857625 1400,50 L1500,50 Z M1600,50 C1600,22.3857625 1577.61424,0 1550,0 C1522.38576,0 1500,22.3857625 1500,50 L1600,50 Z M1700,50 C1700,22.3857625 1677.61424,0 1650,0 C1622.38576,0 1600,22.3857625 1600,50 L1700,50 Z M1800,50 C1800,22.3857625 1777.61424,0 1750,0 C1722.38576,0 1700,22.3857625 1700,50 L1800,50 Z M1900,50 C1900,22.3857625 1877.61424,0 1850,0 C1822.38576,0 1800,22.3857625 1800,50 L1900,50 Z M2000,50 C2000,22.3857625 1977.61424,0 1950,0 C1922.38576,0 1900,22.3857625 1900,50 L2000,50 Z"></path>
   <path id="js-wave1-top" d="M100,50 C100,22.3857625 77.6142375,0 50,0 C22.3857625,0 0,22.3857625 0,50 L100,50 Z M200,50 C200,22.3857625 177.614237,0 150,0 C122.385763,0 100,22.3857625 100,50 L200,50 Z M300,50 C300,22.3857625 277.614237,0 250,0 C222.385763,0 200,22.3857625 200,50 L300,50 Z M400,50 C400,22.3857625 377.614237,0 350,0 C322.385763,0 300,22.3857625 300,50 L400,50 Z M500,50 C500,22.3857625 477.614237,0 450,0 C422.385763,0 400,22.3857625 400,50 L500,50 Z M600,50 C600,22.3857625 577.614237,0 550,0 C522.385763,0 500,22.3857625 500,50 L600,50 Z M700,50 C700,22.3857625 677.614237,0 650,0 C622.385763,0 600,22.3857625 600,50 L700,50 Z M800,50 C800,22.3857625 777.614237,0 750,0 C722.385763,0 700,22.3857625 700,50 L800,50 Z M900,50 C900,22.3857625 877.614237,0 850,0 C822.385763,0 800,22.3857625 800,50 L900,50 Z M1000,50 C1000,22.3857625 977.614237,0 950,0 C922.385763,0 900,22.3857625 900,50 L1000,50 Z M1100,50 C1100,22.3857625 1077.61424,0 1050,0 C1022.38576,0 1000,22.3857625 1000,50 L1100,50 Z M1200,50 C1200,22.3857625 1177.61424,0 1150,0 C1122.38576,0 1100,22.3857625 1100,50 L1200,50 Z M1300,50 C1300,22.3857625 1277.61424,0 1250,0 C1222.38576,0 1200,22.3857625 1200,50 L1300,50 Z M1400,50 C1400,22.3857625 1377.61424,0 1350,0 C1322.38576,0 1300,22.3857625 1300,50 L1400,50 Z M1500,50 C1500,22.3857625 1477.61424,0 1450,0 C1422.38576,0 1400,22.3857625 1400,50 L1500,50 Z M1600,50 C1600,22.3857625 1577.61424,0 1550,0 C1522.38576,0 1500,22.3857625 1500,50 L1600,50 Z M1700,50 C1700,22.3857625 1677.61424,0 1650,0 C1622.38576,0 1600,22.3857625 1600,50 L1700,50 Z M1800,50 C1800,22.3857625 1777.61424,0 1750,0 C1722.38576,0 1700,22.3857625 1700,50 L1800,50 Z M1900,50 C1900,22.3857625 1877.61424,0 1850,0 C1822.38576,0 1800,22.3857625 1800,50 L1900,50 Z M2000,50 C2000,22.3857625 1977.61424,0 1950,0 C1922.38576,0 1900,22.3857625 1900,50 L2000,50 Z"></path>
 </g><defs>
-  <linearGradient x1="64.8928892%" y1="96.3691406%" x2="28.2258366%" y2="46.6467833%" id="linearGradient-11">
-      <stop stop-color="#FD1C41" offset="0%"></stop>
-      <stop stop-color="#9013FE" offset="50%"></stop>
-      <stop stop-color="#00C4FF" offset="100%"></stop>
-  </linearGradient>
-  <linearGradient x1="91.5307265%" y1="18.3704401%" x2="55.8046513%" y2="81.2044917%" id="linearGradient-21">
-      <stop stop-color="#FFFFFF" stop-opacity="0" offset="0%"></stop>
+  <linearGradient x1="81.4754708%" y1="-8.36172919%" x2="62.5470633%" y2="74.5090794%" id="linearGradient-11">
+      <stop stop-color="#00C4FF" offset="0%"></stop>
       <stop stop-color="#FFFFFF" offset="100%"></stop>
   </linearGradient>
-  <linearGradient x1="42.8547664%" y1="86.5277575%" x2="42.8547651%" y2="18.1060449%" id="linearGradient-31">
+  <linearGradient x1="-7.76466837%" y1="19.4099507%" x2="86.7267219%" y2="86.276727%" id="linearGradient-21">
+      <stop stop-color="#00C4FF" offset="0%"></stop>
+      <stop stop-color="#0DB3FF" offset="18.6661605%"></stop>
+      <stop stop-color="#9013FE" offset="100%"></stop>
+  </linearGradient>
+  <linearGradient x1="90.8954327%" y1="3.88427734%" x2="12.622924%" y2="86.1901855%" id="linearGradient-31">
+      <stop stop-color="#FFFFFF" offset="0%"></stop>
+      <stop stop-color="#FA1C46" offset="51.341005%"></stop>
+      <stop stop-color="#9013FE" offset="100%"></stop>
+  </linearGradient>
+  <linearGradient x1="42.8547664%" y1="86.5277575%" x2="42.8547651%" y2="18.1060449%" id="linearGradient-41">
       <stop stop-color="#FFFFFF" stop-opacity="-0.10688574" offset="0%"></stop>
       <stop stop-color="#FFFFFF" offset="100%"></stop>
   </linearGradient>
-  <linearGradient x1="28.685864%" y1="13.3031819%" x2="91.0727072%" y2="105.108419%" id="linearGradient-41">
+  <linearGradient x1="28.685864%" y1="13.3031819%" x2="91.0727072%" y2="105.108419%" id="linearGradient-51">
       <stop stop-color="#000000" stop-opacity="0" offset="0%"></stop>
       <stop stop-color="#000000" offset="100%"></stop>
   </linearGradient>
-  <linearGradient x1="6.14318848%" y1="82.1142578%" x2="74.6337891%" y2="2.48372396%" id="linearGradient-51">
+  <linearGradient x1="6.14318848%" y1="82.1142578%" x2="74.6337891%" y2="2.48372396%" id="linearGradient-61">
       <stop stop-color="#000000" stop-opacity="0" offset="0%"></stop>
       <stop stop-color="#000000" offset="100%"></stop>
   </linearGradient>
-
-  <pattern id="gradient" width="420" height="420" patternUnits="userSpaceOnUse">
-    <rect id="js-logo-gradient" fill="url(#linearGradient-11)" width="420" height="420"></rect>
-    <!-- <rect x="500" y="-100" id="js-logo-gradient2" fill="url(#linearGradient-11)" width="500" height="500"></rect> -->
-  </pattern>
-
+  <linearGradient x1="45.0639268%" y1="58.5219237%" x2="50%" y2="100%" id="linearGradient-7">
+      <stop stop-color="#000000" stop-opacity="0" offset="0%"></stop>
+      <stop stop-color="#000000" stop-opacity="0.147050498" offset="100%"></stop>
+  </linearGradient>
 </defs>
-
-
-
 <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" sketch:type="MSPage">
-    <path d="M50.4617077,246.951585 C50.4617077,246.951585 116.878961,185.348371 134.509353,185.348371 C157.080326,197.743838 197.402729,320.078235 230.886444,326.93893 C263.024978,299.658451 369.613336,49.8180018 369.613336,49.8180018" id="Path-23" stroke="url(#gradient)" stroke-width="100" sketch:type="MSShapeGroup"></path>
-    <path d="M17,17 L17,417 L417,417 L417,17 L17,17 Z M328.48912,68.1102357 C348.556804,66.0814043 368.624487,64.0777088 388.692171,62.0704225 C350.347163,148.983405 312.002155,235.896388 273.646469,322.80578 C272.443405,325.470192 271.421868,328.253103 269.692018,330.637429 C267.33572,333.976921 265.306884,337.643181 262.249392,340.404546 C254.304896,347.643704 243.779862,352.494945 232.934485,352.128678 C230.222252,352.071224 227.506458,352.125087 224.804902,351.880909 C219.18111,351.306373 213.753083,349.392449 208.773536,346.731627 C203.459408,343.855355 198.583082,340.08496 194.664224,335.441989 C192.094365,332.49749 190.27909,329.010773 188.499409,325.556373 C168.35342,287.313799 148.203871,249.078406 128.043644,210.846604 C113.154832,224.664203 98.2766987,238.488983 83.3914464,252.302991 C65.0144599,247.670792 46.6410328,243.035002 28.2676056,238.395621 C48.9474994,219.242016 69.6345119,200.095593 90.317965,180.941989 C93.0017241,178.507391 95.5573461,175.925568 98.4261919,173.710013 C104.274224,169.393808 111.218539,166.754532 118.319467,165.476189 C120.337625,165.074013 122.402055,165.002196 124.416654,164.578476 C127.812285,163.978804 131.279104,164.248117 134.710329,164.187073 C141.45888,164.118847 148.086412,166.144087 154.037665,169.264538 C159.529761,172.173128 164.566258,176.040476 168.559863,180.845036 C171.909222,184.762655 173.948737,189.552852 176.408256,194.037826 C193.909639,227.267571 211.432379,260.486543 228.933762,293.712697 C262.117695,218.513073 295.312306,143.31345 328.48912,68.1102357 Z" id="Rectangle-9" fill="#FFFFFF" sketch:type="MSShapeGroup"></path>
-    <path d="M104.271677,169.019145 L26.7986356,238.817231 L86.498239,254.158889 L129.30813,211.703348 L104.271677,169.019145 Z" id="Rectangle-15" fill="url(#linearGradient-21)" sketch:type="MSShapeGroup"></path>
-    <path d="M397.015628,49.796875 L325.550781,58.5039062 L281.929027,158.18512 L346.483935,164.583667 L397.015628,49.796875 Z" id="Rectangle-16" fill="url(#linearGradient-31)" sketch:type="MSShapeGroup"></path>
-    <path d="M107.64979,172.928948 L128.94929,211.494268 L114.947167,223.937529 L107.64979,172.928948 Z" id="Path-7" opacity="0.104535914" fill="url(#linearGradient-41)" sketch:type="MSShapeGroup"></path>
-    <path d="M218.703425,274.14146 L228.458356,292.96826 L205.469854,341.970711 L218.703425,274.14146 Z" id="Path-8" opacity="0.104535914" fill="url(#linearGradient-51)" sketch:type="MSShapeGroup"></path>
+  <g id="Group" sketch:type="MSLayerGroup" transform="translate(21.000000, 21.000000)">
+      <g id="js-logo-lines" opacity="1">
+        <path d="M80.2079974,126.601444 L17.7158203,182.466797" id="Path-51" stroke="url(#linearGradient-11)" stroke-width="42"></path>
+        <path d="M159.267795,244.777344 L84.0530574,101.681857" id="Path-50" stroke="url(#linearGradient-21)" stroke-width="42"></path>
+        <path d="M158.905746,258.715184 L266.760061,19.369433" id="Path-49" stroke="url(#linearGradient-31)" stroke-width="42"></path>
+      </g>
+      <path d="M0,0 L0,300 L300,300 L300,0 L0,0 Z M278.769128,33.8028169 C250.010372,98.987554 221.251616,164.172291 192.484852,229.354335 C191.582554,231.352644 190.816401,233.439827 189.519013,235.228071 C187.75179,237.732691 186.230163,240.482386 183.937044,242.55341 C177.978672,247.982778 170.084896,251.621209 161.950864,251.346509 C159.916689,251.303418 157.879844,251.343815 155.853677,251.160682 C151.635833,250.72978 147.564812,249.294337 143.830152,247.298721 C139.844556,245.141516 136.187311,242.31372 133.248168,238.831491 C131.320774,236.623117 129.959318,234.008079 128.624557,231.41728 C113.515065,202.735349 98.4029031,174.058805 83.2827329,145.384953 C72.1161242,155.748152 60.957524,166.116738 49.7935848,176.477243 C36.0108449,173.003094 22.2307746,169.526252 8.45070423,166.046716 C23.9606246,151.681512 39.4758839,137.321695 54.9884738,122.956491 C57.001293,121.130543 58.9180095,119.194176 61.0696439,117.532509 C65.4556679,114.295356 70.6639045,112.315899 75.9896,111.357142 C77.5032187,111.05551 79.0515412,111.001647 80.5624904,110.683857 C83.109214,110.234103 85.709328,110.436088 88.2827468,110.390305 C93.3441597,110.339135 98.3148089,111.858065 102.778249,114.198403 C106.897321,116.379846 110.674694,119.280357 113.669897,122.883777 C116.181917,125.821991 117.711553,129.414639 119.556192,132.778369 C132.68223,157.700678 145.824284,182.614907 158.950322,207.534523 C183.838271,151.134805 208.73423,94.7350875 233.61684,38.3326768 C248.667603,36.8110532 263.718365,35.3082816 278.769128,33.8028169 Z" id="Rectangle-9" fill="#FFFFFF"></path>
+      <path d="M285.011721,24.5976563 L231.413086,31.1279296 L196.5,117.301758 L243.741211,121.898438 L285.011721,24.5976563 Z" id="Rectangle-16" fill="url(#linearGradient-41)"></path>
+      <path d="M68.6002081,117.45758 L83.3048222,145.391433 L73.3957049,154.588886 L68.6002081,117.45758 Z" id="Path-7" opacity="0.104535914" fill="url(#linearGradient-51)"></path>
+      <path d="M151.539185,193.486267 L158.941833,207.528259 L141.950317,244.832642 L151.539185,193.486267 Z" id="Path-8" opacity="0.104535914" fill="url(#linearGradient-61)"></path>
+      <path d="M132.626523,238.514054 L194.337716,224.43555 C194.337716,224.43555 187.863803,246.280468 170.318576,250.00652 C144.490331,255.491625 132.626523,238.514054 132.626523,238.514054 Z" id="Path-8" opacity="0.558477146" fill="url(#linearGradient-7)"></path>
+  </g>
 </g>
-
     </svg>
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/velocity/jquery.velocity.min.js"></script>
@@ -647,6 +652,7 @@
     <script src="js/triangles.js"></script>
     <script src="js/svg.js"></script>
     <script src="js/meets.js"></script>
+    <script src="js/logo.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
