--- a/index.html
+++ b/index.html
@@ -148,13 +148,13 @@
         </mask>
         <rect width="1280" height="900" fill="url(#space-dogs-pattern)" mask="url(#meets-mask)"></rect>
         <g id="js-meets-circles">
-          <circle fill="white" stroke="none" r="77" transform="translate(614,222)" data-x="614" data-y="222"></circle>
-          <circle fill="white" stroke="none" r="80" transform="translate(622,256)" data-x="622" data-y="256"></circle>
-          <circle fill="white" stroke="none" r="65" transform="translate(543,211)" data-x="543" data-y="211"></circle>
-          <circle fill="white" stroke="none" r="89" transform="translate(567,252)" data-x="567" data-y="252"></circle>
-          <circle fill="white" stroke="none" r="81" transform="translate(778,266)" data-x="778" data-y="266"></circle>
-          <circle fill="white" stroke="none" r="74" transform="translate(570,291)" data-x="570" data-y="291"></circle>
-          <circle fill="white" stroke="none" r="89" transform="translate(526,201)" data-x="526" data-y="201"></circle>
+          <circle fill="white" stroke="none" r="73" transform="translate(578,253)" data-x="578" data-y="253"></circle>
+          <circle fill="white" stroke="none" r="64" transform="translate(753,286)" data-x="753" data-y="286"></circle>
+          <circle fill="white" stroke="none" r="96" transform="translate(564,225)" data-x="564" data-y="225"></circle>
+          <circle fill="white" stroke="none" r="77" transform="translate(540,282)" data-x="540" data-y="282"></circle>
+          <circle fill="white" stroke="none" r="95" transform="translate(569,232)" data-x="569" data-y="232"></circle>
+          <circle fill="white" stroke="none" r="58" transform="translate(664,208)" data-x="664" data-y="208"></circle>
+          <circle fill="white" stroke="none" r="89" transform="translate(597,267)" data-x="597" data-y="267"></circle>
         </g>
         <rect width="1280" height="900" fill="url(#owls-pattern)" mask="url(#burst-mask)"></rect>
         <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" transform="translate(23,130)">
@@ -299,26 +299,26 @@
       </g>
       <g id="js-svg">
         <g id="js-svg-circles" class="h-g">
-          <circle fill="white" stroke="" r="0" transform="translate(668,590)" data-x="668" data-y="590"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(268,814)" data-x="268" data-y="814"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(768,582)" data-x="768" data-y="582"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(907,116)" data-x="907" data-y="116"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(763,715)" data-x="763" data-y="715"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(671,635)" data-x="671" data-y="635"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(733,640)" data-x="733" data-y="640"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(543,457)" data-x="543" data-y="457"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(349,725)" data-x="349" data-y="725"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(633,89)" data-x="633" data-y="89"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(354,473)" data-x="354" data-y="473"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(833,712)" data-x="833" data-y="712"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(567,789)" data-x="567" data-y="789"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(921,409)" data-x="921" data-y="409"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(296,111)" data-x="296" data-y="111"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(750,783)" data-x="750" data-y="783"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(696,716)" data-x="696" data-y="716"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(766,496)" data-x="766" data-y="496"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(616,94)" data-x="616" data-y="94"></circle>
-          <circle fill="white" stroke="" r="0" transform="translate(245,383)" data-x="245" data-y="383"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(874,215)" data-x="874" data-y="215"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(437,806)" data-x="437" data-y="806"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(388,735)" data-x="388" data-y="735"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(300,549)" data-x="300" data-y="549"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(1015,551)" data-x="1015" data-y="551"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(938,751)" data-x="938" data-y="751"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(550,152)" data-x="550" data-y="152"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(1004,453)" data-x="1004" data-y="453"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(840,313)" data-x="840" data-y="313"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(269,415)" data-x="269" data-y="415"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(451,757)" data-x="451" data-y="757"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(1012,159)" data-x="1012" data-y="159"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(864,698)" data-x="864" data-y="698"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(358,184)" data-x="358" data-y="184"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(840,420)" data-x="840" data-y="420"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(414,420)" data-x="414" data-y="420"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(316,780)" data-x="316" data-y="780"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(905,408)" data-x="905" data-y="408"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(826,561)" data-x="826" data-y="561"></circle>
+          <circle fill="white" stroke="" r="0" transform="translate(718,682)" data-x="718" data-y="682"></circle>
         </g>
         <mask id="svg-s-mask">
           <g transform="translate(250,0)">
@@ -637,9 +637,9 @@
       </g>
       <path d="M0,0 L0,300 L300,300 L300,0 L0,0 Z M278.769128,33.8028169 C250.010372,98.987554 221.251616,164.172291 192.484852,229.354335 C191.582554,231.352644 190.816401,233.439827 189.519013,235.228071 C187.75179,237.732691 186.230163,240.482386 183.937044,242.55341 C177.978672,247.982778 170.084896,251.621209 161.950864,251.346509 C159.916689,251.303418 157.879844,251.343815 155.853677,251.160682 C151.635833,250.72978 147.564812,249.294337 143.830152,247.298721 C139.844556,245.141516 136.187311,242.31372 133.248168,238.831491 C131.320774,236.623117 129.959318,234.008079 128.624557,231.41728 C113.515065,202.735349 98.4029031,174.058805 83.2827329,145.384953 C72.1161242,155.748152 60.957524,166.116738 49.7935848,176.477243 C36.0108449,173.003094 22.2307746,169.526252 8.45070423,166.046716 C23.9606246,151.681512 39.4758839,137.321695 54.9884738,122.956491 C57.001293,121.130543 58.9180095,119.194176 61.0696439,117.532509 C65.4556679,114.295356 70.6639045,112.315899 75.9896,111.357142 C77.5032187,111.05551 79.0515412,111.001647 80.5624904,110.683857 C83.109214,110.234103 85.709328,110.436088 88.2827468,110.390305 C93.3441597,110.339135 98.3148089,111.858065 102.778249,114.198403 C106.897321,116.379846 110.674694,119.280357 113.669897,122.883777 C116.181917,125.821991 117.711553,129.414639 119.556192,132.778369 C132.68223,157.700678 145.824284,182.614907 158.950322,207.534523 C183.838271,151.134805 208.73423,94.7350875 233.61684,38.3326768 C248.667603,36.8110532 263.718365,35.3082816 278.769128,33.8028169 Z" id="Rectangle-9" fill="#FFFFFF"></path>
       <path d="M285.011721,24.5976563 L231.413086,31.1279296 L196.5,117.301758 L243.741211,121.898438 L285.011721,24.5976563 Z" id="Rectangle-16" fill="url(#linearGradient-41)"></path>
-      <path d="M68.6002081,117.45758 L83.3048222,145.391433 L73.3957049,154.588886 L68.6002081,117.45758 Z" id="Path-7" opacity="0.104535914" fill="url(#linearGradient-51)"></path>
-      <path d="M151.539185,193.486267 L158.941833,207.528259 L141.950317,244.832642 L151.539185,193.486267 Z" id="Path-8" opacity="0.104535914" fill="url(#linearGradient-61)"></path>
-      <path d="M132.626523,238.514054 L194.337716,224.43555 C194.337716,224.43555 187.863803,246.280468 170.318576,250.00652 C144.490331,255.491625 132.626523,238.514054 132.626523,238.514054 Z" id="Path-8" opacity="0.558477146" fill="url(#linearGradient-7)"></path>
+      <path opacity="0" d="M68.6002081,117.45758 L83.3048222,145.391433 L73.3957049,154.588886 L68.6002081,117.45758 Z" id="js-shadow-1" opacity="0.104535914" fill="url(#linearGradient-51)"></path>
+      <path opacity="0" d="M151.539185,193.486267 L158.941833,207.528259 L141.950317,244.832642 L151.539185,193.486267 Z" id="js-shadow-2" opacity="0.104535914" fill="url(#linearGradient-61)"></path>
+      <path opacity="0" d="M132.626523,238.514054 L194.337716,224.43555 C194.337716,224.43555 187.863803,246.280468 170.318576,250.00652 C144.490331,255.491625 132.626523,238.514054 132.626523,238.514054 Z" id="js-shadow-3" opacity="0.558477146" fill="url(#linearGradient-7)"></path>
   </g>
 </g>
     </svg>
